--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a402a8a
-	trimbase = 
+	trim = jderobot_camviz
+	base = 901dda8
+	trimbase = a402a8a
 	parent = upstream
 	previous = 29350f9
