--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 901dda8
+	base = 06c2d72
 	trimbase = 
 	parent = release/melodic/jderobot_camviz
-	previous = 
+	previous = 901dda8
