--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f30125f
+	base = 9df02c8
 	trimbase = 
 	parent = debian/melodic/jderobot_camviz
-	previous = 
+	previous = f30125f
