--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0e3625a
+	base = 3ed9323
 	trimbase = 
 	parent = debian/melodic/jderobot_camviz
-	previous = 
+	previous = 0e3625a
