--- a/tracks.yaml
+++ b/tracks.yaml
@@ -13,9 +13,11 @@ tracks:
     - git-bloom-generate -y rosrpm --prefix release/:{ros_distro} :{ros_distro} -i
       :{release_inc}
     devel_branch: null
+    last_release: master
+    last_version: 0.1.0
     name: jderobot_camviz
     patches: null
-    release_inc: 0
+    release_inc: '1'
     release_repo_url: null
     release_tag: master
     ros_distro: melodic
