--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = jderobot_camviz
-	base = f213fbb
-	trimbase = 
+	base = 7feee65
+	trimbase = f213fbb
 	parent = upstream
 	previous = f54ac4f
